5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1807_2568.log
== TEST (2019-06-08 14:32:45) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1/2):
		print("*",end="")
	print("\n",end="")	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in range(j+1/2):
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:33:15) 
-- CODE:
a=float(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1/2):
		print("*",end="")
	print("\n",end="")	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for j in range(a):
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:33:34) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1/2):
		print("*",end="")
	print("\n",end="")	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in range(j+1/2):
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:34:13) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("o",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1/2):
		print("o",end="")
	print("\n",end="")	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in range(j+1/2):
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:35:14) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*","o",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1):
		print("*","o",end="")
	print("\n",end="")	
	
-- OUTPUT:
* o* o* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o
* o* o* o* o* o* o
* o* o* o* o* o
* o* o* o* o
* o* o* o
* o* o
* o
* o
* o* o
* o* o* o
* o* o* o* o
* o* o* o* o* o
* o* o* o* o* o* o
* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o* o* o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:36:01) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="o")
	print("\n",end="")
for j in range(a):
	for i in range(j+1):
		print("*",end="o")
	print("\n",end="")	
	
-- OUTPUT:
*o*o*o*o*o*o*o*o*o*o*o
*o*o*o*o*o*o*o*o*o*o
*o*o*o*o*o*o*o*o*o
*o*o*o*o*o*o*o*o
*o*o*o*o*o*o*o
*o*o*o*o*o*o
*o*o*o*o*o
*o*o*o*o
*o*o*o
*o*o
*o
*o
*o*o
*o*o*o
*o*o*o*o
*o*o*o*o*o
*o*o*o*o*o*o
*o*o*o*o*o*o*o
*o*o*o*o*o*o*o*o
*o*o*o*o*o*o*o*o*o
*o*o*o*o*o*o*o*o*o*o
*o*o*o*o*o*o*o*o*o*o*o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:43:33) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end=)
	print("o",end="")
for j in range(a):
	for i in range(j+1):
		print("*",end="o")
	print("o",end="")	
	
-- ERROR:
File "XXXX", line 4
    print("*",end=)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:43:50) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("o",end="")
for j in range(a):
	for i in range(j+1):
		print("*",end="")
	print("o",end="")	
	
-- OUTPUT:
***********o**********o*********o********o*******o******o*****o****o***o**o*o*o**o***o****o*****o******o*******o********o*********o**********o***********o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:44:41) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\o",end="")
for j in range(a):
	for i in range(j+1):
		print("*",end="")
	print("\o",end="")	
	
-- OUTPUT:
***********\o**********\o*********\o********\o*******\o******\o*****\o****\o***\o**\o*\o*\o**\o***\o****\o*****\o******\o*******\o********\o*********\o**********\o***********\o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:45:32) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="o")
for j in range(a):
	for i in range(j+1):
		print("*",end="")
	print("\n",end="o")	
	
-- OUTPUT:
***********
o**********
o*********
o********
o*******
o******
o*****
o****
o***
o**
o*
o*
o**
o***
o****
o*****
o******
o*******
o********
o*********
o**********
o***********
o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:46:07) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("o",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1):
		print("o",end="")
	print("\n",end="")	
	
-- OUTPUT:
ooooooooooo
oooooooooo
ooooooooo
oooooooo
ooooooo
oooooo
ooooo
oooo
ooo
oo
o
o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:46:55) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*","o",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+2):
		print("*","o",end="")
	print("\n",end="")	
	
-- OUTPUT:
* o* o* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o
* o* o* o* o* o* o
* o* o* o* o* o
* o* o* o* o
* o* o* o
* o* o
* o
* o* o
* o* o* o
* o* o* o* o
* o* o* o* o* o
* o* o* o* o* o* o
* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o* o* o
* o* o* o* o* o* o* o* o* o* o* o* o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:49:05) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1/2):
		print("*",end="")
	print("\n",end="")	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in range(j+1/2):
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:49:24) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+(1/2)):
		print("*",end="")
	print("\n",end="")	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in range(j+(1/2)):
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:02:28) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
c="o"
for i in range(a):
	d=(b*(a-i))+(c*(a-(a-i)))+(c*(a-(a-i)))+(b*(a-i))
	print(d)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 21:02:47) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
c="o"
for i in range(a):
	d=(b*(a-i))+(c*(a-(a-i)))+(c*(a-(a-i)))+(b*(a-i))
	print(d)
	
-- EXECUTION TIME:
1.17594
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
